@@ -1,11 +1,14 @@
 package de.ids_mannheim.korap.oauth2.dto;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
-import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.annotation.JsonProperty;
 
+import de.ids_mannheim.korap.exceptions.KustvaktException;
 import de.ids_mannheim.korap.oauth2.constant.OAuth2ClientType;
 import de.ids_mannheim.korap.oauth2.entity.OAuth2Client;
+import de.ids_mannheim.korap.utils.JsonUtils;
 
 /** Describes information about an OAuth2 client.
  * 
@@ -24,9 +27,15 @@ public class OAuth2ClientInfoDto {
     private String redirect_uri;
     @JsonProperty("registered_by")
     private String registeredBy;
+    @JsonProperty("registration_date")
+    private String registrationDate;
     private OAuth2ClientType type;
+    
+    @JsonProperty("permitted")
+    private boolean isPermitted;
+    private JsonNode source;
 
-    public OAuth2ClientInfoDto (OAuth2Client client) {
+    public OAuth2ClientInfoDto (OAuth2Client client) throws KustvaktException {
         this.id = client.getId();
         this.name = client.getName();
         this.description = client.getDescription();
@@ -34,7 +43,12 @@ public class OAuth2ClientInfoDto {
         this.url = client.getUrl();
         this.registeredBy = client.getRegisteredBy();
         this.redirect_uri = client.getRedirectURI();
-
+        this.registrationDate = client.getRegistrationDate().toString();
+        this.isPermitted = client.isPermitted();
+        String source = client.getSource();
+        if (source != null) {
+            this.source = JsonUtils.readTree(source);
+        }
         if (client.isSuper()) {
             this.isSuper = "true";
         }
@@ -102,6 +116,27 @@ public class OAuth2ClientInfoDto {
 
     public void setRedirect_uri (String redirect_uri) {
         this.redirect_uri = redirect_uri;
+    }
+    
+    public String getRegistrationDate () {
+        return registrationDate;
+    }
+    public void setRegistrationDate (String registrationDate) {
+        this.registrationDate = registrationDate;
+    }
+    
+    public JsonNode getSource () {
+        return source;
+    }
+    public void setSource (JsonNode source) {
+        this.source = source;
+    }
+    
+    public boolean isPermitted () {
+        return isPermitted;
+    }
+    public void setPermitted (boolean isPermitted) {
+        this.isPermitted = isPermitted;
     }
 
 }
